syntax = "proto3";

package kv.data;

message ValueStore {
  bytes address = 1;
}

message ValueDescriptor {
  ValueStore current = 1;
  repeated ValueStore edits = 2;
}

message KeyMap {
  map<string, ValueDescriptor> map = 1;
}
